# BasicsOfProgramming

./: CMakeLists.txt  main.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h  matrix_tasks.c  matrix_tasks.h  matrix_tasks_tests.c  matrix_tasks_tests.h  matrix_tests.c  matrix_tests.h
libs/data_structures/ordered_array/: orderedArray.c  orderedArray.h
libs/data_structures/string/: CMakeLists.txt  string_.c  string_.h  tests_string.c  tests_string.h
libs/data_structures/string/tasks/: areAllLettersOfThisWord.c  areAllLettersOfThisWord.h  areIdenticalWordsInString.c  areIdenticalWordsInString.h  areWordsConsistFromTheSameLetters.c  areWordsConsistFromTheSameLetters.h  countWordsPalindromes.c  countWordsPalindromes.h  deletePalindromes.c  deletePalindromes.h  digitToStartLetterToEnd.c  digitToStartLetterToEnd.h  getStringFromTheOtherTwo.c  getStringFromTheOtherTwo.h  getStringWithoutLastWord.c  getStringWithoutLastWord.h  isAlphabeticalOrder.c  isAlphabeticalOrder.h  lastMatch.c  lastMatch.h  printWordBeforeFirstWordWithA.c  printWordBeforeFirstWordWithA.h  printWordsOnePerLineInReversedOrder.c  printWordsOnePerLineInReversedOrder.h  removeAdjacentEqualLetters.c  removeAdjacentEqualLetters.h  removeNonLetters.c  removeNonLetters.h  replaceWords.c  replaceWords.h  reverseString.c  reverseString.h  reverseWords.c  reverseWords.h  (+2 more)
libs/data_structures/unordered_array/: unorderedArray.c  unorderedArray.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h  vector_tests.c  vector_tests.h
(+3 files in other folders)
