add_library(string string_.c
        tasks/removeNonLetters.c
        tests_string.c
        tasks/removeAdjacentEqualLetters.c
        tasks/digitToStartLetterToEnd.c
        tasks/reverseWords.c
        tasks/turnDigitIntoSpaces.c
        tasks/replaceWords.c
        tasks/isAlphabeticalOrder.c
        tasks/printWordsOnePerLineInReversedOrder.c
        tasks/countWordsPalindromes.c
        tasks/getStringFromTheOtherTwo.c
        tasks/reverseString.c
        tasks/printWordBeforeFirstWordWithA.c
        tasks/areIdenticalWordsInString.c
        tasks/areWordsConsistFromTheSameLetters.c
        tasks/getStringWithoutLastWord.c)